--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,14 @@ table
     text-align:center;
 }
 
-#products
+.container
 {
-    width:1300px;
-    margin-left:25px;
-    margin-bottom:55px;
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+}
+
+.item
+{
+    width:95%;
 }
