--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@ table
     text-align:center;
 }
 
-.container
+/* .container
 {
     display:flex;
     flex-direction:row;
     justify-content:center;
-}
+} */
 
 .item
 {
